Fix mouse tooltiip text wrapping and overlapping when cut off by extension window.

--- a/src/components/video/navigation/VideoDirectoryBrowser/VideoDirectoryBrowser.css
+++ b/src/components/video/navigation/VideoDirectoryBrowser/VideoDirectoryBrowser.css
@@ -54,6 +54,7 @@
 		flex-wrap: wrap;
 		align-items: center;
 		gap: var(--pfy-spacing-standard);
+		text-wrap: nowrap;
 	}
 
 	.directory-item {
